# imu-har-occupational-health

./: README.md  pyproject.toml  requirements.txt
models/demo/: random_forest_model.joblib
models/results/: pamap2_best_model.joblib  uci_har_best_model.joblib
notebooks/: demo_walkthrough.ipynb  real_data_walkthrough.ipynb
reports/demo/: metrics.json  synthetic_sample.csv  window_predictions.csv
reports/results/: metrics.json  pamap2_predictions.csv  uci_har_predictions.csv
src/imu_har/: __init__.py  cli.py  pipeline.py
tests/: test_smoke.py
